# wapanel

./: .buildinfo  .clang-format  .gitignore  .gitmodules  3RD_PARTY_LICENSES  3TH_PARTY_LICENSES  LICENSE  README.md  README.rst  builder  config.hh.in  config_data.hh.in  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  search.html  searchindex.js  wapanel.css  wapanel.toml
.github/workflows/: codeql-analysis.yml  format.yml  main.yml
_sources/: index.rst.txt
_sources/devs/: aapi_reference.rst.txt  writing_applet.rst.txt
_sources/users/: command_line.rst.txt  config_file.rst.txt  css.rst.txt  themes.rst.txt
devs/: aapi_reference.html  using_applet_config.html  writing_applet.html
docs/: Doxyfile  Makefile  conf.py  index.rst
docs/devs/: aapi_reference.rst  using_applet_config.rst  writing_applet.rst
docs/users/: applets.rst  config_file.rst
src/: applets.cc  applets.hh  config.cc  config.hh  log.hh  main.cc  panel.cc  panel.hh  utils.cc  utils.hh  wap_t_convert.cc  wap_t_convert.hh
src/applets/: double_fork.hh  icon_cache.cc  icon_cache.hh  meson.build
src/applets/activator/: activator.cc  activator.hh  main.cc  meson.build
src/applets/app-finder/: app-entry.hh  app-finder.cc  app-finder.hh  main.cc  menu_entries.cc  menu_entries.hh  meson.build
src/applets/app-finder/components/: action_bar.cc  action_bar.hh  list_area.cc  list_area.hh  logout_box.cc  logout_box.hh
src/applets/app-finder/search-engine/: search_engine.cc  search_engine.hh  search_engine_blocklist.hh  search_engine_globals.cc  search_engine_mime.hh
src/applets/app-finder/xdg-menu-spec-impl-for-the-love-of-god-do-not-use-it/: menu_entries.cc
src/applets/clock/: clock.cc  clock.hh  main.cc  meson.build
src/applets/separator/: main.cc  meson.build
src/applets/task-switcher/: main.cc  meson.build  task_switcher.cc  task_switcher.hh  wl_toplevel.cc  wl_toplevel.hh  wl_toplevel_manager.cc  wl_toplevel_manager.hh
src/applets/volume-control/: backend.hh  icon-cache.cc  icon-cache.hh  main.cc  meson.build  volume-control.cc  volume-control.hh
src/applets/volume-control/backends/: pulseaudio.cc  pulseaudio.hh
src/lib/: appletapi.c  appletapi.h
users/: applets.html  command_line.html  config_file.html  css.html  themes.html
